Adding relationships between deal and product